kubernetes/1-configure_cluster/3-rancher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-ingress
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer 
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: rancher.demo.internal.maguscorp.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rancher
            port:
              number: 80
  tls:
  - hosts:
    -  rancher.demo.internal.maguscorp.com.br
    secretName: tls-rancher-ingress
